2005-07-10  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\texinfoversion): Update.

2005-07-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (verbatim): mention @verbatim inside
	@smallformat, now that it works.

2005-07-04  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\commondummies): Remove \unsepspaces, it's already
	  called by \normalturnoffactive.  Move \normalturnoffactive near the
	  end of the macro.

2005-07-01  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex: Remove all occurences of \normalturnoffactive or
	  \turnoffactive attached to \indexdummies or \atdummies, since they
	  are redundant; \indexdummies and \atdummies both call \commondummies,
	  which calls \normalturnoffactive, which calls \turnoffactive.
	(\indexdummies, \atdummies): Move the definitions of \definedummy* ...
	(\commondummies): ... here; they now take a control sequence as their
	  parameter; all callers fixed.
	(\indexnofonts): Fixed the definitions of \definedummy* macros.
	(\indexdummies): Define \escapechar = `\\ ...
	(\onepageout): ... thus remove it from here.
	(\macrolist): Now has the form of \definedummyword\macro1...  It also
	  gathers user-defined aliases, so there is ...
	(\addtomacrolist): ... a new macro ...
	(\macroxxx, \aliasyyy): ... caled from these two.
	(\unmacro, \unmacrodo): Adapted to the new form of \macrolist.
	(\turnoffmacros, \emptyusermacros): Removed, mere \macrolist is enough
	  now.

2005-07-01  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\nonarrowing): Update the description.
	(\cartouche): Set \nonarrowing to "t", not \comment.
	(\nonfillstart, \quotation): Reset \nonarrowing.

2005-06-30  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\setupverbatim): Use \nonarrowing to declare that
	we don't want to narrow the environment.

2005-06-24  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Move the computation of $makeinfo to...
	(run_makeinfo): here.

	* util/texi2dvi (tex, bibtex, texindex): Move their computation to...